--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http": "^0.0.1-security",
-    "nodemon": "^3.0.3",
+    "express": "^4.18.2",
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.3"
   }
 }
