--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.16.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "cors": "^2.8.5",
